# Openstock

./: .env.example  .gitignore  Cargo.toml  README.md
.gitea/workflows/: ci.yml  release.yml
.plan/: command.md
ops/gitea-runner/: .env.example  docker-compose.yml
scripts/: install.sh  runner-down.sh  runner-logs.sh  runner-up.sh  uninstall.sh  update.sh
skills/openstock-agent-cli/: SKILL.md
skills/openstock-agent-cli/references/commands/: guide.md
skills/openstock-agent-cli/references/commands/account/: guide.md
skills/openstock-agent-cli/references/commands/api/: guide.md
skills/openstock-agent-cli/references/commands/cache/: guide.md
skills/openstock-agent-cli/references/commands/dart/: guide.md
skills/openstock-agent-cli/references/commands/market/: guide.md
skills/openstock-agent-cli/references/commands/order/: guide.md
src/: main.rs
src/apis/: mod.rs
src/apis/kis/: account_config.rs  account_status.rs  buy.rs  call.rs  info.rs  login.rs  main.rs  market.rs  market_history.rs  order_common.rs  order_status.rs  sell.rs  stock_info.rs
src/apis/mock/: info.rs  login.rs  main.rs
src/commands/: account.rs  api.rs  cache.rs  dart.rs  market.rs  mod.rs  order.rs  score.rs  search.rs  universe.rs  update.rs  version.rs
src/core/: cache.rs  dotenv.rs  http.rs  mod.rs  output.rs  paths.rs  registry.rs  scores.rs  stock.rs  trader.rs
src/providers/: mod.rs
src/providers/kind/: universe.rs
src/providers/naver/: search.rs
src/providers/opendart/: corp_codes.rs  disclosures.rs  document.rs  mod.rs
(+30 files in other folders)
