[package]
name = "openstock"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
ureq = { version = "3", default-features = false, features = ["json", "gzip", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
